--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+/* Core Data Grid CSS */
+@import 'ag-grid-community/styles/ag-grid.css';
+/* Quartz Theme Specific CSS */
+@import 'ag-grid-community/styles/ag-theme-quartz.css';
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+  --success: rgba(0,194,0,255);
+  --gray: rgba(169,169,169,255);
+}
+
+
+.container {
+  max-width: 1280px;
+  padding: 10px 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+[class^="fa-"].fa-cl-success {
+  color: var(--success);
+}
