--- a/src/app/gh-integration/gh-integration.component.scss
+++ b/src/app/gh-integration/gh-integration.component.scss
@@ -16,4 +16,21 @@
 
 .data-container {
   padding: 1em 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.fields-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.sticky-container {
+  position: sticky;
+  top: 0;
+  z-index: 99999;
+  background: whitesmoke;
 }
