--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { background: whitesmoke; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 :root {
   --success: rgba(0,194,0,255);
