--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,3 +24,6 @@ body { background: whitesmoke; margin: 0; font-family: Roboto, "Helvetica Neue",
 [class^="fa-"].fa-cl-success {
   color: var(--success);
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
