--- a/src/app/gh-integration/gh-integration.component.html
+++ b/src/app/gh-integration/gh-integration.component.html
@@ -52,15 +52,37 @@
         <input #searchField #searchModel='ngModel' [disabled]="loadingSearchResults || loadingCommits || loadingIssues"
                matInput [(ngModel)]="searchTerm"/>
       </mat-form-field>
-      <pre><code>{{ loadingSearchResults }}</code></pre>
-      <pre><code>{{ loadingCommits }}</code></pre>
-      <pre><code>{{ loadingIssues }}</code></pre>
     </div>
   }
 </div>
 
 @if (isUserLoggedIn) {
   <div class="data-container mat-elevation-z4">
+    <div [ngxLoaderIndicator]="loadingCommits || loadingSearchResults">
+      @if (!commitsSearchResult?.length && !this.searchTerm().length) {
+        <app-gh-data-grid [data]="(commits$ | async)!" collectionName="Repo Commits"
+                          (pageChange)="handlePageChange('Repo Commits', $event )"
+                          [pageSize]="PageSize"></app-gh-data-grid>
+      } @else {
+        <app-gh-data-grid collectionName="Repo Commits Search Results"
+                          [searchResults]="commitsSearchResult"
+                          (pageChange)="handlePageChange('Repo Commits', $event )"
+                          [pageSize]="PageSize"></app-gh-data-grid>
+      }
+    </div>
+    <div [ngxLoaderIndicator]="loadingIssues || loadingSearchResults">
+      @if (!issuesSearchResult?.length  && !this.searchTerm().length) {
+
+        <app-gh-data-grid [data]="(issues$ | async)!" collectionName="Repo Issues"
+                          (pageChange)="handlePageChange('Repo Issues', $event )"
+                          [pageSize]="PageSize"></app-gh-data-grid>
+      } @else {
+        <app-gh-data-grid collectionName="Repo Issues Search Results"
+                          [searchResults]="issuesSearchResult"
+                          (pageChange)="handlePageChange('Repo Issues', $event )"
+                          [pageSize]="PageSize"></app-gh-data-grid>
+      }
+    </div>
     <div [ngxLoaderIndicator]="loadingOrgs">
       <app-gh-data-grid [data]="(orgs$ | async)!" collectionName="Organizations"
                         (pageChange)="handlePageChange('Organizations', $event )"
@@ -69,16 +91,6 @@
     <div [ngxLoaderIndicator]="loadingRepos">
       <app-gh-data-grid [data]="(repos$ | async)!" collectionName="Repos"
                         (pageChange)="handlePageChange('Repos', $event )" [pageSize]="PageSize"></app-gh-data-grid>
-    </div>
-    <div [ngxLoaderIndicator]="loadingCommits || loadingSearchResults">
-      <app-gh-data-grid [data]="(commits$ | async)!" collectionName="Repo Commits"
-                        (pageChange)="handlePageChange('Repo Commits', $event )"
-                        [pageSize]="PageSize"></app-gh-data-grid>
-    </div>
-    <div [ngxLoaderIndicator]="loadingIssues || loadingSearchResults">
-      <app-gh-data-grid [data]="(issues$ | async)!" collectionName="Repo Issues"
-                        (pageChange)="handlePageChange('Repo Issues', $event )"
-                        [pageSize]="PageSize"></app-gh-data-grid>
     </div>
     <div [ngxLoaderIndicator]="loadingPulls">
       <app-gh-data-grid [data]="(pulls$ | async)!" collectionName="Repo Pull Requests"
