--- a/src/app/gh-integration/gh-integration.component.html
+++ b/src/app/gh-integration/gh-integration.component.html
@@ -49,53 +49,43 @@
 
       <mat-form-field floatLabel="always">
         <mat-label>Search</mat-label>
-        <input #searchField #searchModel='ngModel' [disabled]="loadingSearchResults || loadingCommits || loadingIssues"
+        <input #searchField #searchModel='ngModel' [disabled]="loadingSearchResults"
                matInput [(ngModel)]="searchTerm"/>
       </mat-form-field>
+
+      <pre><code>{{ loadingSearchResults }}</code></pre>
     </div>
   }
 </div>
 
 @if (isUserLoggedIn) {
   <div class="data-container mat-elevation-z4">
-    <div [ngxLoaderIndicator]="loadingCommits || loadingSearchResults">
+    <div>
       @if (!commitsSearchResult?.length && !this.searchTerm().length) {
-        <app-gh-data-grid [data]="(commits$ | async)!" collectionName="Repo Commits"
-                          (pageChange)="handlePageChange('Repo Commits', $event )"
-                          [pageSize]="PageSize"></app-gh-data-grid>
+        <app-gh-data-grid collectionName="Repo Commits"></app-gh-data-grid>
       } @else {
-        <app-gh-data-grid collectionName="Repo Commits Search Results"
-                          [searchResults]="commitsSearchResult"
-                          (pageChange)="handlePageChange('Repo Commits', $event )"
-                          [pageSize]="PageSize"></app-gh-data-grid>
+        <div [ngxLoaderIndicator]="loadingSearchResults">
+          <app-gh-data-grid collectionName="Repo Commits Search Results"
+                            [searchResults]="commitsSearchResult"
+                            [searchEnabled]="!!searchTerm()?.length"
+          ></app-gh-data-grid>
+        </div>
       }
     </div>
-    <div [ngxLoaderIndicator]="loadingIssues || loadingSearchResults">
-      @if (!issuesSearchResult?.length  && !this.searchTerm().length) {
 
-        <app-gh-data-grid [data]="(issues$ | async)!" collectionName="Repo Issues"
-                          (pageChange)="handlePageChange('Repo Issues', $event )"
-                          [pageSize]="PageSize"></app-gh-data-grid>
-      } @else {
+    @if (!issuesSearchResult?.length && !this.searchTerm().length) {
+      <app-gh-data-grid collectionName="Repo Issues"></app-gh-data-grid>
+    } @else {
+      <div [ngxLoaderIndicator]="loadingSearchResults">
         <app-gh-data-grid collectionName="Repo Issues Search Results"
                           [searchResults]="issuesSearchResult"
-                          (pageChange)="handlePageChange('Repo Issues', $event )"
-                          [pageSize]="PageSize"></app-gh-data-grid>
-      }
-    </div>
-    <div [ngxLoaderIndicator]="loadingOrgs">
-      <app-gh-data-grid [data]="(orgs$ | async)!" collectionName="Organizations"
-                        (pageChange)="handlePageChange('Organizations', $event )"
-                        [pageSize]="PageSize"></app-gh-data-grid>
-    </div>
-    <div [ngxLoaderIndicator]="loadingRepos">
-      <app-gh-data-grid [data]="(repos$ | async)!" collectionName="Repos"
-                        (pageChange)="handlePageChange('Repos', $event )" [pageSize]="PageSize"></app-gh-data-grid>
-    </div>
-    <div [ngxLoaderIndicator]="loadingPulls">
-      <app-gh-data-grid [data]="(pulls$ | async)!" collectionName="Repo Pull Requests"
-                        (pageChange)="handlePageChange('Repo Pull Requests', $event )"
-                        [pageSize]="PageSize"></app-gh-data-grid>
-    </div>
+                          [searchEnabled]="!!searchTerm()?.length"
+        ></app-gh-data-grid>
+
+      </div>
+    }
+    <app-gh-data-grid collectionName="Organizations"></app-gh-data-grid>
+    <app-gh-data-grid collectionName="Repos"></app-gh-data-grid>
+    <app-gh-data-grid collectionName="Repo Pull Requests"></app-gh-data-grid>
   </div>
 }
