--- a/src/app/gh-integration/gh-integration.component.html
+++ b/src/app/gh-integration/gh-integration.component.html
@@ -1,6 +1,17 @@
 @let isUserLoggedIn = sessionService.isLoggedIn();
 
 <div class="sticky-container">
+  @if (isSyncing && isUserLoggedIn) {
+    <div class="alert-container">
+      <div class="prefix">
+        <mat-spinner [diameter]="40"></mat-spinner>
+      </div>
+      <div class="message">
+        Your data is being synchronized. This may take a few minutes depending on the size of your repositories.
+        Your data might be incomplete until the synchronization is complete. You page will reload automatically.
+      </div>
+    </div>
+  }
   <mat-accordion class="header-align">
     <mat-expansion-panel [expanded]="!isUserLoggedIn">
       <mat-expansion-panel-header>
@@ -18,7 +29,7 @@
           @if (isUserLoggedIn) {
             <span>&nbsp;</span>
             <small>
-              <div>Admin: Last synced on {{ sessionService.getUser().lastSync | date: 'YYYY-MM-dd hh:mm a' }}</div>
+              <div>Admin: Last synced on {{ sessionService.getUser()!.lastSync | date: 'YYYY-MM-dd hh:mm a' }}</div>
               <div>Sync type: Full</div>
             </small>
           }
@@ -59,25 +70,25 @@
 @if (isUserLoggedIn) {
   <div class="data-container mat-elevation-z4">
     <div>
-      @if (!commitsSearchResult?.length && !this.searchTerm().length) {
+      @if (!commitsSearchResult.length && !this.searchTerm().length) {
         <app-gh-data-grid collectionName="Repo Commits"></app-gh-data-grid>
       } @else {
         <div [ngxLoaderIndicator]="loadingSearchResults">
           <app-gh-data-grid collectionName="Repo Commits Search Results"
                             [searchResults]="commitsSearchResult"
-                            [searchEnabled]="!!searchTerm()?.length"
+                            [searchEnabled]="!!searchTerm().length"
           ></app-gh-data-grid>
         </div>
       }
     </div>
 
-    @if (!issuesSearchResult?.length && !this.searchTerm().length) {
+    @if (!issuesSearchResult.length && !this.searchTerm().length) {
       <app-gh-data-grid collectionName="Repo Issues"></app-gh-data-grid>
     } @else {
       <div [ngxLoaderIndicator]="loadingSearchResults">
         <app-gh-data-grid collectionName="Repo Issues Search Results"
                           [searchResults]="issuesSearchResult"
-                          [searchEnabled]="!!searchTerm()?.length"
+                          [searchEnabled]="!!searchTerm().length"
         ></app-gh-data-grid>
 
       </div>
@@ -85,5 +96,15 @@
     <app-gh-data-grid collectionName="Organizations"></app-gh-data-grid>
     <app-gh-data-grid collectionName="Repos"></app-gh-data-grid>
     <app-gh-data-grid collectionName="Repo Pull Requests"></app-gh-data-grid>
+  </div>
+}
+@else {
+  <div class="centered-animation">
+    <ng-lottie
+      width="600px"
+      height="500px"
+      containerClass="moving-box another-class"
+      [options]="options"
+    />
   </div>
 }
